<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eventmakr.eventmakr.Activities.MainActivity">

    <ImageView
        android:id="@+id/imageView_logo"
        android:src="@drawable/logo2"
        android:layout_centerHorizontal="true"
        android:layout_width="340dp"
        android:layout_height="300dp" />

        <android.support.v7.widget.CardView
            android:id="@+id/buttonPlanning"
            android:layout_above="@+id/buttonLogIn"
            android:layout_margin="30dp"
            app:cardCornerRadius="5dp"
            android:elevation="2dp"
            app:cardBackgroundColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                android:text="@string/i_m_planning_an_event"
                android:elevation="4dp"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/buttonLogIn"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/textView_imAVendor"
        android:layout_margin="30dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/log_in"
                android:elevation="4dp"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView_imAVendor"
        android:text="@string/i_m_a_vendor"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
