<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eventmakr.eventmakr.Fragments.ConsumerFragments.ConsumerInputFragment">

    <include
        android:id="@+id/layoutConsumerInput2"
        android:visibility="gone"
        layout="@layout/fragment_consumer_calendar"
        />

    <RelativeLayout
        android:id="@+id/layoutConsumerInput1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_centerInParent="true"
            android:paddingBottom="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_centerHorizontal="true"
                android:text="@string/what_s_the_occasion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewOccasion"/>

            <Spinner
                android:layout_width="150dp"
                android:tag="Select"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewOccasion"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="28dp"
                android:id="@+id/spinner_occasion" />

            <TextView
                android:layout_centerHorizontal="true"
                android:layout_marginTop="170dp"
                android:layout_below="@id/textViewOccasion"
                android:text="@string/enter_your_zip_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewZipCode" />

            <EditText
                android:id="@+id/editTextZipCode"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textViewZipCode"
                android:layout_margin="20dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/buttonNextInput"
            app:cardBackgroundColor="@color/colorButtons"
            app:cardCornerRadius="5dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="40dp"
            android:elevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="80dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_centerInParent="true"
                    android:text="@string/next"
                    android:textSize="20sp"
                    android:elevation="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</FrameLayout>
