<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/topPanelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="Vendor Main Menu"
                android:layout_centerHorizontal="true"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewFoundVendors1" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutVendorMenu1"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/topPanelLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewProducts"
                app:cardUseCompatPadding="true"
                app:cardElevation="2dp"
                app:cardBackgroundColor="@color/colorButtons"
                android:layout_width="120dp"
                android:layout_height="150dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <TextView
                        android:text="My Products"
                        android:layout_centerInParent="true"
                        android:padding="10dp"
                        android:textColor="@color/colorText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewDocuments"
                android:layout_toEndOf="@id/cardViewProducts"
                app:cardUseCompatPadding="true"
                app:cardElevation="2dp"
                app:cardBackgroundColor="@color/colorButtons"
                android:layout_width="120dp"
                android:layout_height="150dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <TextView
                        android:text="Documents"
                        android:layout_centerInParent="true"
                        android:padding="10dp"
                        android:textColor="@color/colorText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewInputInfo"
                android:layout_toEndOf="@id/cardViewDocuments"
                app:cardUseCompatPadding="true"
                app:cardElevation="2dp"
                app:cardBackgroundColor="@color/colorButtons"
                android:layout_width="120dp"
                android:layout_height="150dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <TextView
                        android:text="My Info"
                        android:layout_centerInParent="true"
                        android:padding="10dp"
                        android:textColor="@color/colorText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutVendor2"
            android:layout_below="@+id/layoutVendorMenu1"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewPartySupplies"
                app:cardUseCompatPadding="true"
                app:cardElevation="2dp"
                app:cardBackgroundColor="@color/colorButtons"
                android:layout_width="180dp"
                android:layout_height="150dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <TextView
                        android:text="@string/party_supplies"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:padding="10dp"
                        android:textColor="@color/colorText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewDjs"
                app:cardUseCompatPadding="true"
                android:layout_toEndOf="@+id/cardViewPartySupplies"
                app:cardElevation="2dp"
                app:cardBackgroundColor="@color/colorButtons"
                android:layout_width="180dp"
                android:layout_height="150dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <TextView
                        android:text="@string/djs"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:padding="10dp"
                        android:textColor="@color/colorText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutVendor3"
            android:layout_below="@+id/layoutVendor2"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewBakeries"
                app:cardUseCompatPadding="true"
                app:cardElevation="2dp"
                app:cardBackgroundColor="@color/colorButtons"
                android:layout_width="360dp"
                android:layout_height="150dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <TextView
                        android:text="@string/bakeries"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:padding="10dp"
                        android:textColor="@color/colorText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>